--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,20 +1,20 @@
 @font-face {
     font-family: 'Netflix Sans';
     font-weight: 400;
-    font-display: swap;
+    font-display: block;
     src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Rg.woff2) format('woff2'), url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Rg.woff) format('woff')
 }
 
 @font-face {
     font-family: 'Netflix Sans';
     font-weight: 700;
-    font-display: swap;
+    font-display: block;
     src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Md.woff2) format('woff2'), url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Md.woff) format('woff')
 }
 
 @font-face {
     font-family: 'Netflix Sans';
     font-weight: 900;
-    font-display: swap;
+    font-display: block;
     src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Blk.woff2) format('woff2'), url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Blk.woff) format('woff')
 }
